// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextAreaInput /> should render a disabled text area 1`] = `
<Styled(TextareaAutosize)
  className=""
  disabled={true}
  id="test-textarea"
  name="test-textarea"
  rows={2}
/>
`;

exports[`<TextAreaInput /> should render a text area 1`] = `
<Styled(TextareaAutosize)
  className=""
  id="test-textarea"
  name="test-textarea"
  rows={2}
/>
`;

exports[`<TextAreaInput /> should render a text area with a different amount of rows 1`] = `
<Styled(TextareaAutosize)
  className=""
  id="test-textarea"
  name="test-textarea"
  rows={20}
/>
`;

exports[`<TextAreaInput /> should render a text area with placeholder text 1`] = `
<Styled(TextareaAutosize)
  className=""
  id="test-textarea"
  name="test-textarea"
  placeholder="test placeholder :)"
  rows={2}
/>
`;

exports[`<TextAreaInput /> should render an invalid text area 1`] = `
<Styled(TextareaAutosize)
  className="is-invalid-input"
  id="test-textarea"
  name="test-textarea"
  rows={2}
/>
`;
